  They may also be used to do more complex formatting with custom
  C code, what provided greater flexibility and probably far higher
  speed, for example if using multiple regular expressions within a 
  template.
- added 4 string generators for
  * RSYSLOG_FileFormat
  * RSYSLOG_TraditionalFileFormat
  * RSYSLOG_ForwardFormat
  * RSYSLOG_TraditionalForwardFormat
---------------------------------------------------------------------------
Version 5.5.5  [DEVEL] (rgerhards), 2010-05-20
- added new cancel-reduced action thread termination method
  We now manage to cancel threads that block inside a retry loop to
  terminate without the need to cancel the thread. Avoiding cancellation
  helps keep the system complexity minimal and thus provides for better
  stability. This also solves some issues with improper shutdown when
  inside an action retry loop.
---------------------------------------------------------------------------
Version 5.5.4  [DEVEL] (rgerhards), 2010-05-03
- This version offers full support for Solaris on Intel and Sparc
- bugfix: problems with atomic operations emulaton
  replaced atomic operation emulation with new code. The previous code
  seemed to have some issue and also limited concurrency severely. The
  whole atomic operation emulation has been rewritten.
- bugfix: netstream ptcp support class was not correctly build on systems
  without epoll() support
- bugfix: segfault on Solaris/Sparc
---------------------------------------------------------------------------
Version 5.5.3  [DEVEL] (rgerhards), 2010-04-09
- added basic but functional support for Solaris
- imported many bugfixes from 3.6.2/4.6.1 (see ChangeLog below!)
- added new property replacer option "date-rfc3164-buggyday" primarily
  to ease migration from syslog-ng. See property replacer doc for
  details.
- added capability to turn off standard LF delimiter in TCP server
  via new directive "$InputTCPServerDisableLFDelimiter on"