@@ -92,33 +92,15 @@ static uint64 clockFileAccess = 0;
 static unsigned clockFileAccess = 0;
 #endif
 /* and the "tick" function */
-#ifdef HAVE_ATOMIC_BUILTINS
+#ifndef HAVE_ATOMIC_BUILTINS
+static pthread_mutex_t mutClock;
+#endif
 static inline uint64
 getClockFileAccess(void)
 {
-	return ATOMIC_INC_AND_FETCH(clockFileAccess);
+	return ATOMIC_INC_AND_FETCH(&clockFileAccess, &mutClock);
 }
-#else
-/* if we do not have atomics, we need to guard this via a mutex.
- * the reason is that otherwise cache lookups may fail. That function
- * requires the highest current value, and we can not provide that
- * without using atomic instructions and mutexes.
- * rgerhards, 2010-03-05
- */
-static pthread_mutex_t mutClock;
-static uint64
-getClockFileAccess(void)
-{
-	uint64 retVal;
 
-	BEGINfunc
-	d_pthread_mutex_lock(&mutClock);
-	retVal = ++clockFileAccess;
-	d_pthread_mutex_unlock(&mutClock);
-	ENDfunc
-	return retVal;
-}
-#endif  /* #ifdef HAVE_ATOMIC_BUILTINS */
 
 /* The following structure is a dynafile name cache entry.
  */
@@ -879,9 +861,7 @@ CODESTARTmodExit
 	objRelease(errmsg, CORE_COMPONENT);
 	objRelease(strm, CORE_COMPONENT);
 	free(pszFileDfltTplName);
-#	ifndef HAVE_ATOMIC_BUILTINS
-	pthread_mutex_destroy(&mutClock);
-#	endif
+	DESTROY_ATOMIC_HELPER_MUT(mutClock);
 ENDmodExit
 
 
@@ -900,9 +880,7 @@ CODEmodInit_QueryRegCFSLineHdlr
 	CHKiRet(objUse(errmsg, CORE_COMPONENT));
 	CHKiRet(objUse(strm, CORE_COMPONENT));
 
-#	ifndef HAVE_ATOMIC_BUILTINS
-	pthread_mutex_init(&mutClock, NULL);
-#	endif
+	INIT_ATOMIC_HELPER_MUT(mutClock);
 
 	INITChkCoreFeature(bCoreSupportsBatching, CORE_FEATURE_BATCHING);
 	DBGPRINTF("omfile: %susing transactional output interface.\n", bCoreSupportsBatching ? "" : "not ");
