@@ -12,6 +12,8 @@ Version 5.5.6  [DEVEL] (rgerhards), 2010-06-??
   * RSYSLOG_TraditionalFileFormat
   * RSYSLOG_ForwardFormat
   * RSYSLOG_TraditionalForwardFormat
+- bugfix: mutexes used to similate atomic instructions were not destructed
+- bugfix: regression caused more locking action in msg.c than necessary
 ---------------------------------------------------------------------------
 Version 5.5.5  [DEVEL] (rgerhards), 2010-05-20
 - added new cancel-reduced action thread termination method
@@ -23,7 +25,7 @@ Version 5.5.5  [DEVEL] (rgerhards), 2010-05-20
 ---------------------------------------------------------------------------
 Version 5.5.4  [DEVEL] (rgerhards), 2010-05-03
 - This version offers full support for Solaris on Intel and Sparc
-- bugfix: problems with atomic operations emulaton
+- bugfix: problems with atomic operations emulation
   replaced atomic operation emulation with new code. The previous code
   seemed to have some issue and also limited concurrency severely. The
   whole atomic operation emulation has been rewritten.
